Fix whitespace issue around tutorial contents

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -523,6 +523,15 @@ nav input.nicer {
         }
     }
 
+	div.container blockquote {
+		ul, p, li > p:last-child {
+			margin-bottom: 0.5rem;
+		}
+		p:last-child {
+			margin-bottom: 0;
+		}
+	}
+
     // tutorial boxes
     blockquote {
         ul,
